[package]
name = "osmbin_rust"
version = "0.1.0"
edition = "2021"
description = "Library to handle OsmBin format for OpenStreetMap"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.0", features = ["derive"] }
flate2 = "1.0.34"
geo = "0.28.0"
geos = { version = "9.0.0", features = ["geo"] }
osmpbfreader = "0.16.1"
quick-xml = "0.36.2"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
ureq = "2.10.1"

[dev-dependencies]
tempfile = "3.13.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

case_sensitive_file_extension_comparisons = "allow"
doc-markdown = "allow"
manual_assert = "allow"
match_same_arms = "allow"
missing-errors-doc = "allow"
missing_panics_doc = "allow"
module-name-repetitions = "allow"
must_use_candidate = "allow"
