[package]
name = "osm-replication-rust"
version = "0.2.0"
edition = "2021"
description = "Split OpenStreetMap diffs by polygons"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"
geo = "0.29.2"
geos = { version = "9.0.0", features = ["geo"] }
osmpbfreader = "0.16.1"
quick-xml = "0.37.1"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
ureq = "2.11.0"

[dev-dependencies]
tempfile = "3.14.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

case_sensitive_file_extension_comparisons = "allow"
doc-markdown = "allow"
manual_assert = "allow"
match_same_arms = "allow"
missing-errors-doc = "allow"
missing_panics_doc = "allow"
module-name-repetitions = "allow"
must_use_candidate = "allow"
