[package]
name = "osm-replication-rust"
version = "0.3.1"
edition = "2024"
description = "Split OpenStreetMap diffs by polygons"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.14"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
fd-lock = "4.0.4"
flate2 = "1.1.9"
geo = "0.32.0"
geos = { version = "11.1.1", features = ["geo"] }
http = "1.4.0"
osmpbfreader = "0.19.1"
quick-xml = "0.39.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
ureq = "3.2.0"

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

case_sensitive_file_extension_comparisons = "allow"
doc-markdown = "allow"
manual_assert = "allow"
match_same_arms = "allow"
missing-errors-doc = "allow"
missing_panics_doc = "allow"
module-name-repetitions = "allow"
must_use_candidate = "allow"
